<resources>
    <string name="app_name">TakoRecipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_prepTime">Preparation Time</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="submit_recipe">Submit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="view">VIEW</string>

    <string name="tako_recipe">Welcome to Tako Recipe!</string>
    <string name="tako_getstarted">To get started, select the following.</string>

    <string name="sampleLatteName">Latte</string>
    <string name="sampleLatteDesc">Latte has more milk than cappucinno and americano.</string>
    <string name="sampleLatteSteps">Latte Steps</string>

    <string name="no_recipe">There are currently no recipe to show!</string>

    <string name="editRecipe">Edit Recipe</string>
    <string name="updateRecipe">Update Recipe</string>

    <string name="recipeDeleted">This recipe has been deleted.</string>
    <string name="returningRecipeList">%1$s has been deleted. Returning to Recipe List.</string>
    <string name="okDialog">OK</string>

    <string name="deleteRecipeConfirmationTitle">Delete this recipe?</string>
    <string name="deleteRecipeConfirmationMessage">Are you sure you want to delete recipe for %1$s?</string>

    <!--For Snackbars-->
    <string name="recipeUpdateSuccess">Successfully updated recipe for %1$s.</string>
    <string name="recipeDeletedSnackbar">Successfully deleted this recipe!</string>
    <string name="recipeDeleteSuccess">Successfully added new recipe!</string>
    <string name="launchingRecipeEditor">Loading Add Recipe...</string>
    <string name="launchingRecipeList">Loading Recipe List</string>
    <string name="launchingEventLogs">Loading Event Logs</string>

    <!--For Edit Text Layout Error Message-->
    <string name="recipe_alphabets_only">Please enter only alphabetical characters!</string>
    <string name="recipe_donotincludespecialcharacters">Please do not include special characters!</string>
    <string name="recipe_stringEmpty">Please do not leave this field blank!</string>

    <!--For ViewHolder Snackbar-->
    <string name="viewholder_clicked">Loading %1$s...</string>

    <!-- For Event Logs -->
    <string name="eventlog_create">Created %1$s</string>
    <string name="eventlog_update">Updated %1$s</string>
    <string name="eventlog_delete">Deleted %1$s</string>

    <!-- For Menu -->
    <string name="menu_title">My Recipe</string>
    <string name="menu_eventlog">View Event Logs</string>
    <string name="menu_recipe_editor">Add Recipe</string>
    <string name="menu_recipe_list">View Recipe</string>

    <!-- Get Started Buttons -->
    <string name="getstarted_viewrecipe">View Recipes</string>
    <string name="getstarted_editrecipe">New Recipe</string>
    <string name="getstarted_viewevents">View Events</string>
    <string name="gettingstarted">Getting Started</string>
    <string name="recipe_favorite">Favorite</string>
    <string name="joekane_copyright">Created By: Siew Joe Kane (103130764)</string>
    <string name="delete">Delete</string>
</resources>
